<resources>
    <string name="app_name">AQI Status</string>
    <string name="current_city">Current</string>
    <string name="action_settings">Settings</string>
    <string name="pm2_5">PM2.5 (AQI): %.0f</string>
    <string name="pm10">PM10 (AQI): %.0f</string>
    <string name="o3">O3 (AQI): %.1f</string>
    <string name="no2">NO2 (AQI): %.1f</string>
    <string name="so2">SO2 (AQI): %.1f</string>
    <string name="co">CO (AQI): %.1f</string>
    <string name="humidity">Humidity: %.1f</string>
    <string name="aqi">AQI</string>
    <string name="what_is_aqi">What\'s AQI?\nAn air quality index (AQI) is used by government agencies[1] to communicate to the public how polluted the air currently is or how polluted it is forecast to become.</string>
    <string name="air_pollution_level">Air Pollution Level</string>
    <string name="explain_table">The table below defines the Air Quality Index scale as defined by the US-EPA 2016 standard</string>
    <string name="_0_50">0 – 50</string>
    <string name="good">Good</string>
    <string name="good_explain">Air quality is considered satisfactory, and air pollution poses little or no risk</string>
    <string name="_51_100">51 -100</string>
    <string name="moderate">Moderate</string>
    <string name="moderate_explain">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.\n\n*Cautionary*\nActive children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion.</string>
    <string name="_101_150">101–150</string>
    <string name="bad">Unhealthy for Sensitive Groups</string>
    <string name="bad_explain">Members of sensitive groups may experience health effects. The general public is not likely to be affected.\n\n*Cautionary*\nActive children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion.</string>
    <string name="_151_200">151–200</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="unhealthy_explain">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects\n\n*Cautionary*\nActive children and adults, and people with respiratory disease, such as asthma, should avoid prolonged outdoor exertion; everyone else, especially children, should limit prolonged outdoor exertion</string>
    <string name="_201_300">201–300</string>
    <string name="very_unhealthy">Very Unhealthy</string>
    <string name="very_unhealthy_explain">Health warnings of emergency conditions. The entire population is more likely to be affected.\n\n*Cautionary*\nActive children and adults, and people with respiratory disease, such as asthma, should avoid all outdoor exertion; everyone else, especially children, should limit outdoor exertion.</string>
    <string name="_300_plus">300+</string>
    <string name="hazardous">Hazardous</string>
    <string name="hazardous_explain">Health alert: everyone may experience more serious health effects\n\n*Cautionary*\nEveryone should avoid all outdoor exertion.</string>
    <string name="search_location">Search City</string>
    <string name="no_result">There is no result. \nPlease search city accurately.</string>
    <string name="title_activity_maps">Search Map</string>
    <string name="select">Select</string>
    <string name="current_area">Current Area</string>
    <string name="delete_city">Are you sure delete selected city?</string>
    <string name="max_city">Max city is 20. Please delete saved city.</string>
    <string name="appwidget_text">AQI Status</string>
    <string name="add_widget">Add widget</string>
    <string name="aqi_icon">aqi_icon</string>
    <string name="widget_icon">widget_aqi_icon</string>
</resources>
