<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_table"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/air_pollution_level"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/aqi_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_good"
                android:padding="4dp"
                android:text="@string/_0_50"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_good"
                android:padding="4dp"
                android:text="@string/good"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/aqi_moderate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_moderate"
                android:padding="4dp"
                android:text="@string/_51_100"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_moderate"
                android:padding="4dp"
                android:text="@string/moderate"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/aqi_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_bad"
                android:padding="4dp"
                android:text="@string/_101_150"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_bad"
                android:padding="4dp"
                android:text="@string/bad"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/aqi_so_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_so_bad"
                android:padding="4dp"
                android:text="@string/_151_200"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_so_bad"
                android:padding="4dp"
                android:text="@string/unhealthy"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/aqi_very_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_very_bad"
                android:padding="4dp"
                android:text="@string/_201_300"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_very_bad"
                android:padding="4dp"
                android:text="@string/very_unhealthy"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:id="@+id/aqi_extremely_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/aqi_extremely_bad"
                android:padding="4dp"
                android:text="@string/_300_plus"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqi_extremely_bad"
                android:padding="4dp"
                android:text="@string/hazardous"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>